loader z-index fix

--- a/src/components/LayoutComponents/Loader/style.module.scss
+++ b/src/components/LayoutComponents/Loader/style.module.scss
@@ -10,7 +10,7 @@
   margin-left: -90px;
   margin-top: -110px;
   border-radius: 20px;
-  z-index: 100000;
+  z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center;
